--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -11,14 +11,19 @@ varsize="256m"
 varmfs_flags="-S -M"
 populate_var="YES"
 
-#ifconfig_em0="DHCP"
-#sshd_enable="YES"
+homemfs="YES"
+homesize="32m"
+homemfs_flags="-S -M"
+
+sshd_enable="YES"
 moused_enable="NO"
+ntpd_enable="YES"
 dumpdev="NO"
+hostid_file="/tmp/hostid"
 
 sendmail_enable="NO"
 sendmail_submit_enable="NO"
 sendmail_outbound_enable="NO"
 sendmail_msp_queue_enable="NO"
-# -- sysinstall generated deltas -- # Sun Feb  5 19:04:46 2012
+
 ifconfig_bge0="DHCP"
