--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -26,4 +26,5 @@ sendmail_submit_enable="NO"
 sendmail_outbound_enable="NO"
 sendmail_msp_queue_enable="NO"
 
-ifconfig_bge0="DHCP"
+#ifconfig_bge0="DHCP"
+ifconfig_em0="DHCP"
