--- a/boot/loader.conf
+++ b/boot/loader.conf
@@ -4,6 +4,9 @@ kern.maxvnodes=250000
 vfs.zfs.arc_max="40M"
 vfs.zfs.vdev.cache.size="10M"
 
+amr_load="YES"
+amr_linux_load="YES"
+
 opensolaris_load="YES"
 zfs_load="YES"
 zlib_load="YES"
